fix z-index aside drawer on absolute position

--- a/src/modules/drawer/drawer.css
+++ b/src/modules/drawer/drawer.css
@@ -36,6 +36,7 @@
 .kit-drawer > .drawer-aside.aside-absolute {
 	position: absolute;
 	height: 100%;
+	z-index: 900;
 }
 
 .kit-drawer > .drawer-aside {
